// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config schema (0) match fails for invalid config -> empty: empty 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must NOT have fewer than 1 properties[39m
[31m    Path:     configPublish.schema.json#/minProperties[39m
[31m[39m"
`;

exports[`config schema (1) match fails for invalid config -> name missing in network1, group name missing for password: name missing in network1, group name missing for password 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /network1 must have required property 'name'[39m
[31m    Received: [33m<object> [39m[31m{\\"ip\\":{\\"type\\":\\"string\\"},\\"snm\\":{\\"name\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"},\\"type\\":\\"string\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/ip must have required property 'name'[39m
[31m    Received: [33m<object> [39m[31m{\\"type\\":\\"string\\"}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/ip must have required property 'value'[39m
[31m    Received: [33m<object> [39m[31m{\\"type\\":\\"string\\"}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/ip/type must be equal to one of the allowed values[39m
[31m    Expected: [\\"Boolean\\",\\"ByteString\\",\\"DateTime\\",\\"Number\\",\\"String\\"][39m
[31m    Received: [33m<string>[39m[31m string[39m
[31m    Path:     configPublish.schema.json#/properties/type/enum[39m
[31m[39m[31m  /network1/snm must have required property 'value'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"},\\"type\\":\\"string\\"}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/snm/type must be equal to one of the allowed values[39m
[31m    Expected: [\\"Boolean\\",\\"ByteString\\",\\"DateTime\\",\\"Number\\",\\"String\\"][39m
[31m    Received: [33m<string>[39m[31m string[39m
[31m    Path:     configPublish.schema.json#/properties/type/enum[39m
[31m[39m[31m  /network2/ip must have required property 'value'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"IP Adresse\\"},\\"type\\":\\"string\\"}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network2/ip/type must be equal to one of the allowed values[39m
[31m    Expected: [\\"Boolean\\",\\"ByteString\\",\\"DateTime\\",\\"Number\\",\\"String\\"][39m
[31m    Received: [33m<string>[39m[31m string[39m
[31m    Path:     configPublish.schema.json#/properties/type/enum[39m
[31m[39m[31m  /network2/snm must have required property 'value'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"},\\"type\\":\\"string\\"}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network2/snm/type must be equal to one of the allowed values[39m
[31m    Expected: [\\"Boolean\\",\\"ByteString\\",\\"DateTime\\",\\"Number\\",\\"String\\"][39m
[31m    Received: [33m<string>[39m[31m string[39m
[31m    Path:     configPublish.schema.json#/properties/type/enum[39m
[31m[39m[31m  /password/type must be object[39m
[31m    Received: [33m<string>[39m[31m string[39m
[31m    Path:     configPublish.schema.json#/type[39m
[31m[39m"
`;

exports[`config schema (2) match fails for invalid config -> only name provided: only name provided 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /network1 must NOT have fewer than 2 properties[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/minProperties[39m
[31m[39m"
`;

exports[`config schema (3) match fails for invalid config -> only description provided: only description provided 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /network1 must NOT have fewer than 2 properties[39m
[31m    Received: [33m<object> [39m[31m{\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/minProperties[39m
[31m[39m[31m  /network1 must have required property 'name'[39m
[31m    Received: [33m<object> [39m[31m{\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m"
`;

exports[`config schema (4) match fails for invalid config -> group name starts with invalid character: group name starts with invalid character 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must NOT have additional properties, but found '.network1'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found '-network1'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found '#network1'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found '%network1'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found '$network1'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`config schema (5) match fails for invalid config -> config name starts with invalid character: config name starts with invalid character 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /network1/-ip must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/-ip must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/#snm must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/#snm must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/%foo must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/%foo must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/$bar must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/$bar must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`config schema (6) match fails for invalid config -> group name contains with invalid character: group name contains with invalid character 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must NOT have additional properties, but found 'ip#'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'snm%'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'foo$'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar&'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar:'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar§'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar!'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar?'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar='[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar('[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar)'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar<'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar>'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar{'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar}'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar/'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar\\"'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar''[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar+'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar*'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar@'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'bar°'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'barß'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'barü'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'barä'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'barö'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`config schema (7) match fails for invalid config -> config name contains with invalid character: config name contains with invalid character 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /network1/ip# must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/ip# must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/snm% must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/snm% must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/foo$ must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/foo$ must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar& must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar& must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar: must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar: must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar§ must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar§ must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar! must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar! must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar? must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar? must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar= must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar= must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar( must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar( must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar) must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar) must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar< must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar< must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar> must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar> must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar{ must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar{ must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar} must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar} must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar~1 must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar~1 must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar\\" must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar\\" must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar' must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar' must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar+ must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar+ must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar* must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar* must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar@ must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar@ must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar° must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar° must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/barß must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/barß must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/barü must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/barü must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/barä must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/barä must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/barö must have required property 'locale'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/barö must have required property 'text'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'name'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'description'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/additionalProperties[39m
[31m[39m[31m  /network1/bar[ must have required property 'type'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar[ must have required property 'value'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar] must have required property 'type'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar] must have required property 'value'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar\\\\ must have required property 'type'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m[31m  /network1/bar\\\\ must have required property 'value'[39m
[31m    Received: [33m<object> [39m[31m{\\"name\\":{\\"locale\\":\\"en-UK\\",\\"text\\":\\"test\\"},\\"description\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m"
`;

exports[`config schema (8) match fails for invalid config -> name and description with suffix: name and description with suffix 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /network1 must have required property 'name'[39m
[31m    Received: [33m<object> [39m[31m{\\"name-1\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Subnetzmaske\\"},\\"description-1\\":{\\"locale\\":\\"de-DE\\",\\"text\\":\\"Mein toller Text\\"}}[39m
[31m    Path:     configPublish.schema.json#/required[39m
[31m[39m"
`;

exports[`config schema (9) match fails for invalid config -> complex example with different errors: complex example with different errors 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  /device1/protocol/validation/min must be number[39m
[31m    Received: [33m<empty string>[39m[31m[39m
[31m    Path:     configPublish.schema.json#/properties/validation/properties/min/type[39m
[31m[39m[31m  /device1/protocol/validation/max must be number[39m
[31m    Received: [33m<empty string>[39m[31m[39m
[31m    Path:     configPublish.schema.json#/properties/validation/properties/max/type[39m
[31m[39m[31m  /device1/unit/validation/values/5 must be string[39m
[31m    Received: [33m<object> [39m[31m{\\"a\\":\\"b\\"}[39m
[31m    Path:     configPublish.schema.json#/properties/validation/properties/values/items/type[39m
[31m[39m[31m  /device1/unit/validation/values/6 must be string[39m
[31m    Received: [33m<number>[39m[31m 2[39m
[31m    Path:     configPublish.schema.json#/properties/validation/properties/values/items/type[39m
[31m[39m[31m  /device1/unit/validation/values/7 must be string[39m
[31m    Received: [33m<number>[39m[31m 1[39m
[31m    Path:     configPublish.schema.json#/properties/validation/properties/values/items/type[39m
[31m[39m[31m  /general/date-time/type must be equal to one of the allowed values[39m
[31m    Expected: [\\"Boolean\\",\\"ByteString\\",\\"DateTime\\",\\"Number\\",\\"String\\"][39m
[31m    Received: [33m<string>[39m[31m Datetime[39m
[31m    Path:     configPublish.schema.json#/properties/type/enum[39m
[31m[39m"
`;
